custom_portal.css
/* ... */
.messages.info {
	background-color: var(--dark-orange);
	padding: 5px 0 8px 0;
	font-family: inherit;
	color: var(--dark-darkest-background);
	font-size: 1em;
}

.messages.danger {
	background: var(--dark-red);
	color: var(--dark-secondary-background);
	padding: 5px 0 8px 0;
	font-family: inherit;
	font-size: 1em;
}

.login {
	background-color: var(--dark-secondary-background);
	height: 300px;
	border-radius: 15px 15px 0 0;
	/* box-shadow: 8px 8px 8px rgb(16, 28, 22); */
	box-shadow: none;
	border-bottom: 28px solid var(--dark-red);
}

.login-form {
	width: 50%;
	margin: 0 5% 0 45%;
	height: 100%;
	display: grid;
	align-content: center;
}

.login-form .btn {
	height: 52px;
	margin: 8px 0;
	background-color: var(--dark-red);
	color: var(--dark-main-background);
	text-align: center;
}

.login-form .btn:hover {
	background: url("pictures/picto.png") no-repeat 0 52px var(--dark-green);
	color: var(--dark-main-background);
}

.login-form .form-group {
	display: inline-block;
	height: 52px;
	margin: 8px 0;
	padding: 0;
	overflow: hidden;
	position: relative;
	/* Fix Ynh Portal */
	background: none;
	/* Fix Ynh Portal */
}

.login-form .form-text,
.icon-user,
.icon-lock {
	display: inline-block !important;
	height: 100%;
}

.login-form label::before {
	width: 0;
	height: 0;
}

.icon-user::before,
.icon-lock::before {
	content: none;
}

.login-form .form-text {
	width: calc(100% - 52px);
	padding: 0 5%;
	border: 0;
	font-family: 'NotoSansBold', serif;
	background-color: var(--dark-main-background);
	color: var(--dark-form-text);
	position: relative;
}

.login-form .form-text::placeholder {
	color: var(--dark-form-text);
}

.icon-user,
.icon-lock {
	float: left;
	width: 52px;
}

.icon-user {
	background-image: url("pictures/picto.png");
}

.icon-lock {
	background-image: url("pictures/picto.png");
	background-position: 0 -52px;
}

input[type="submit"] {
	border: 0;
	background-image: url("pictures/picto.png");
	background-position: 0 -102px;
	background-repeat: repeat-y;
	background-color: var(--dark-secondary-text);

	/* Typo Setup */
	font-family: 'NotoSansBold', serif;
	color: var(--dark-form-text);
	text-align: left;
}

/* ------------------------
		Apps Tile Page 
------------------------ */
/* ------------------------
				Main Setup
		------------------------ */
body.logged,
.logged .content {
	min-height: 100vh;
}

.logged {
	margin: 0;
	padding: 0;
	position: unset;
}

.logged .content {
	max-width: 100%;
}

.logged .messages {
	max-width: 0;
	max-height: 0;
	margin: 0;
	padding: 0;
	overflow: hidden;
}

.logged .user-menu {
	text-align: center;
	display: flex;
	width: 100%;
}

.logged .user-menu li {
	text-align: center;
	width: 100%;
}

.logged .user-menu li:hover {
	background-color: var(--dark-red);
	color: var(--dark-darkest-background);
}

.logged .user-menu a {
	margin: 0;
	padding: 16px;
	color: var(--dark-form-text);
}

.user-menu a:hover,
.user-menu a:focus {
	color: var(--dark-darkest-background);
}

/* ------------------------
				Pannel
		------------------------ */
.logged #user{
	display: block;
	width: 275px;
	background-image: none;
	overflow: hidden;
	margin-top: 5%;
	background-color: var(--dark-sidebar-background);
}

/* ------------------------
				User
		------------------------ */
.user-container {
	display: flex;
	flex-flow: column wrap;
	text-align: center;
	justify-content: center;
	align-items: center;
	position: relative;
	max-width: 100%;
	line-height: 2.6em;
	margin: 0;
	padding: 1px;
	padding-bottom: 18px;
	background-color: var(--dark-secondary-background);
	color: var(--dark-light-orange);
	text-align: center;
	overflow: hidden;
}

.user-container::before {
	content: none;
}

.user-container::before {
	color: inherit;
}

.user-container-edit {
	flex-flow: column nowrap;
	justify-content: center;
	align-items: center;
	align-self: center;
	text-align: center;
	margin: 0 10%;
	min-height: 82px;
	font-size: 1.6em;
}

.user-username {
	display: flex;
	flex-flow: column nowrap;
	justify-content: center;
	align-items: center;
	max-width: 100%;
	font-size: 1.2em;
	padding: 0 12px 0 12px;
	margin: 10% 0px 10% 0px;
	color: var(--dark-purple);
	text-align: left;
	width: 100%;
	height: 282px;
  	overflow-y: hidden;
	overflow-x: auto;
	word-wrap: anywhere;
}

.user-container .user-username::after,
.user-container-edit .user-username::after {
	font-family: "Icon Awesome", serif;
	content: "\f044";
	color: var(--dark-orange);
	font-size: 1.2em;
	width: 1em;
	height: 1em;
	margin-left: .5em;
	vertical-align: baseline;
}

.user-container .user-fullname,
.user-container .user-mail {
	display: inline;
	font-size: 1em;
	text-align: center;
	padding: 6px 0 0;
}

.user-container .user-fullname {
	display: block;
	text-align: left;
	padding: 5px;
}

.user-container .user-mail {
	color: var(--dark-form-text);
	margin: 0;
}

.user-container .user-fullname:before {
	content: "Bienvenue ";
}

.user-container .user-username:before {
	display: block;
	position: relative;
	content: url("pictures/avatars/base.png");
	width: 142px;
	height: 142px;
	border: solid 2px var(--dark-orange);
	border-radius: 100%;
  	overflow: hidden;
	size: 16px;
	opacity: 0;
	transition: all 1s ease-in-out; 
	margin-bottom: 10px;
}

/* ------------------------
				Yunohost Icon
		------------------------ */
.logged #ynh-logo {
	position: fixed;
	bottom: 10px;
	margin: 0;
	padding: 0 108px 0 0;
	width: 29%;
	height: 85px;
	line-height: 85px;
	right: 0;
	text-align: right;
	background-position: right;
	color: var(--dark-form-text);
	font-variant: small-caps;
	font-family: 'NotoSansBold', serif;

}

.logged #ynh-logo:before {
	content: "Powered by ";
}

/* ------------------------
				Logout Icon
		------------------------ */
.icon-connexion {
	color: var(--dark-form-text);
}

.icon-connexion::before {
	color: var(--dark-red);
}

.icon-connexion:hover {
	color: var(--dark-darkest-background);
}
/* ... */

